fix overflow

--- a/news-frontend/src/components/NewsCard/NewsCard.css
+++ b/news-frontend/src/components/NewsCard/NewsCard.css
@@ -66,7 +66,7 @@
   letter-spacing: 0px;
   text-align: left;
   margin: 0;
-  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .news-card__source {
